// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create shapshot of when loading is false 1`] = `
.emotion-0 {
  display: grid;
  grid-template-rows: auto;
  grid-template-columns: auto auto;
  gap: 0.25rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  cursor: pointer;
}

.emotion-1 {
  line-height: 1rem;
}

.emotion-2 {
  width: 1rem;
  height: 1rem;
}

<body>
  <div>
    <span
      aria-labelledby="tooltip-content-2"
      class="ui-text emotion-0"
      data-aa-class="Undefined__trigger"
      data-uses-unhanded-props="true"
      role="button"
    >
      <span
        class="emotion-1"
      >
        <span
          aria-hidden="true"
          class="root_dd790ee3 emotion-2"
        >
          <svg
            class="svg_dd790ee3"
            focusable="false"
            viewBox="0 0 2048 2048"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M768 768h128v128H768V768zm384 768h128v128h-128v-128zm384-768h128v128h-128V768zm-384 0h128v128h-128V768zm-384 256h128v128H768v-128zm-384 0h128v128H384v-128zm1152 0h128v128h-128v-128zm-384 0h128v128h-128v-128zm-384 256h128v128H768v-128zm-384 0h128v128H384v-128zm1152 0h128v128h-128v-128zm-384 0h128v128h-128v-128zm-384 256h128v128H768v-128zm-384 0h128v128H384v-128zM2048 128v1792H0V128h384V0h128v128h1024V0h128v128h384zM128 256v256h1792V256h-256v128h-128V256H512v128H384V256H128zm1792 1536V640H128v1152h1792z"
            />
          </svg>
        </span>
      </span>
    </span>
  </div>
  <div
    aria-hidden="true"
    class="ui-tooltip__content"
    data-aa-class="Undefined__tooltip"
    data-uses-unhanded-props="true"
    dir="auto"
    id="tooltip-content-2"
    role="tooltip"
  >
    <div>
      Open channel calendar
    </div>
  </div>
</body>
`;

exports[`create shapshot of when loading is true 1`] = `
.emotion-0 {
  display: grid;
  grid-template-rows: auto;
  grid-template-columns: auto auto;
  gap: 0.25rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  cursor: pointer;
}

.emotion-1 {
  line-height: 1rem;
}

.emotion-2>div {
  width: 1rem;
  height: 1rem;
}

.emotion-2>div>div::before {
  width: 1rem;
  -webkit-animation-timing-function: steps(90);
  animation-timing-function: steps(90);
}

<body>
  <div>
    <span
      aria-labelledby="tooltip-content-1"
      class="ui-text emotion-0"
      data-aa-class="Undefined__trigger"
      data-uses-unhanded-props="true"
      role="button"
    >
      <span
        class="emotion-1"
      >
        <div
          class="ui-loader emotion-2"
          data-aa-class="Loader"
          data-uses-unhanded-props="true"
          role="progressbar"
        >
          <div
            class="ui-box ui-loader__indicator"
            data-uses-unhanded-props="true"
          >
            <div
              class="ui-box ui-loader__svg"
              data-uses-unhanded-props="true"
            />
          </div>
        </div>
      </span>
    </span>
  </div>
  <div
    aria-hidden="true"
    class="ui-tooltip__content"
    data-aa-class="Undefined__tooltip"
    data-uses-unhanded-props="true"
    dir="auto"
    id="tooltip-content-1"
    role="tooltip"
  >
    <div>
      Open channel calendar
    </div>
  </div>
</body>
`;
